added: swagger generated files
