# swagger/model_list.go
@@ -1,0 +1,23 @@
+/*
+ * Takí Project
+ *
+ * IF683 Takí project
+ *
+ * API version: 1.0.0
+ * Contact: mvgmb@cin.ufpe.br
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+
+package swagger
+
+type List struct {
+
+	// Unique identifier representing a specific List
+	Id int32 `json:"_id,omitempty"`
+
+	// Name of list
+	Name string `json:"name,omitempty"`
+
+	// List of Products
+	Products []Product `json:"products,omitempty"`
+}
