# swagger/model_map.go
@@ -1,0 +1,16 @@
+/*
+ * Takí Project
+ *
+ * IF683 Takí project
+ *
+ * API version: 1.0.0
+ * Contact: mvgmb@cin.ufpe.br
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+
+package swagger
+
+type ModelMap struct {
+
+	Matrix [][]MapValue `json:"matrix,omitempty"`
+}
