# swagger/model_map_route.go
@@ -1,0 +1,17 @@
+/*
+ * Takí Project
+ *
+ * IF683 Takí project
+ *
+ * API version: 1.0.0
+ * Contact: mvgmb@cin.ufpe.br
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+
+package swagger
+
+type MapRoute struct {
+
+	// Products route
+	Route []MapValue `json:"route,omitempty"`
+}
