# swagger/model_map_value.go
@@ -1,0 +1,23 @@
+/*
+ * Takí Project
+ *
+ * IF683 Takí project
+ *
+ * API version: 1.0.0
+ * Contact: mvgmb@cin.ufpe.br
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+
+package swagger
+
+type MapValue struct {
+
+	// Category of store
+	Category string `json:"category,omitempty"`
+
+	// Aisle of category
+	Aisle int32 `json:"aisle,omitempty"`
+
+	// Direction of aisle
+	Direction int32 `json:"direction,omitempty"`
+}
